--- a/index.html
+++ b/index.html
@@ -38,35 +38,26 @@
             <div class="column">
                 <h2 class="awork">Artwork</h2>
                 <img src="images/Placeholder.png" alt="Picture of Artwork from Silvermancer" class="frame">
-                <p>There is no chin behind Chuck Norris' beard. There is only another fist Chuck Norris is so fast, he can run around the world and punch himself in the back of the head.</p>
-                <p>Most people have 23 pairs of chromosomes. Chuck Norris has 72... and they're all poisonous Chuck Norris once roundhouse kicked someone so hard that his foot broke the speed of light, went back in time, and killed Amelia Earhart while she was flying over the Pacific Ocean.</p>
-                <p>Chuck Norrs bar stools only have one leg, There is no theory of evolution. Just a list of animals Chuck Norris allows to live When any poll, sports games, or contests happen Chuck Norris is ALWAYS the winner, There is no theory of evolution. Just a list of creatures Chuck Norris has allowed to live, The leading causes of death in the United States are: 1. Heart Disease 2. Chuck Norris 3. Cancer Chuck Norris is my Homeboy.</p>
-                <p>The Great Wall of China was originally created to keep Chuck Norris out. It failed miserably. There is no theory of evolution. Just a list of animals Chuck Norris allows to live Contrary to popular belief, Chuck Norris, not the box jellyfish of northern Australia, is the most venomous creature on earth. </p>
-                <p>The quickest way to a man's heart is with Chuck Norris' fist, Chuck Norris originally appeared in the "Street Fighter II" video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked about this "glitch," Norris replied, "That's no glitch.".</p>
+                <h3>Hot off the tablet!</h3> 
+                <p>From ink, charcoal and contemporary pencil to the latest in vector and AI design, here at Silvermancer we value being flexible and always experimenting with being innovative in trying new techniques. While you can't rush effort, we hope to delight you in the mean time between our releases with our diverse portfolio. Check out the above artwork for our latest releases or the Archive for our older designs.</p>
                 </div>
              <div class="column">
                 <h2 class="mdesign">Media Design</h2>
                 <img src="images/Placeholder.png" alt="Example of Media Designs from Silvermancer" class="frame">
-                <p>There is no chin behind Chuck Norris' beard. There is only another fist Chuck Norris is so fast, he can run around the world and punch himself in the back of the head.</p>
-                <p>Most people have 23 pairs of chromosomes. Chuck Norris has 72... and they're all poisonous Chuck Norris once roundhouse kicked someone so hard that his foot broke the speed of light, went back in time, and killed Amelia Earhart while she was flying over the Pacific Ocean.</p>
-                <p>Chuck Norrs bar stools only have one leg, There is no theory of evolution. Just a list of animals Chuck Norris allows to live When any poll, sports games, or contests happen Chuck Norris is ALWAYS the winner, There is no theory of evolution. Just a list of creatures Chuck Norris has allowed to live, The leading causes of death in the United States are: 1. Heart Disease 2. Chuck Norris 3. Cancer Chuck Norris is my Homeboy.</p>
-                <p>The Great Wall of China was originally created to keep Chuck Norris out. It failed miserably. There is no theory of evolution. Just a list of animals Chuck Norris allows to live Contrary to popular belief, Chuck Norris, not the box jellyfish of northern Australia, is the most venomous creature on earth. </p>
-                <p>The quickest way to a man's heart is with Chuck Norris' fist, Chuck Norris originally appeared in the "Street Fighter II" video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked about this "glitch," Norris replied, "That's no glitch.".</p>
+                <h3>Time to get Emote-tional!</h3>  
+                <p>Finding the right emotes that resonates with your unique community can be tricky but the benefits of enticing new subscribers and increasing interactivity is well worth the effort. Are there any inside jokes that you have with your community? Is there a common used emote in your channel? How can your emotes reflect your branding on other channels when used?  We will work with you to figure out your specific needs.</p>
             </div>
             <div class="column">
                 <h2 class="gassets">Game Assets</h2>
                 <img src="images/Placeholder.png" alt="Example of Game Assets from Silvermancer" class="frame">
-                <p>There is no chin behind Chuck Norris' beard. There is only another fist Chuck Norris is so fast, he can run around the world and punch himself in the back of the head.</p>
-                <p>Most people have 23 pairs of chromosomes. Chuck Norris has 72... and they're all poisonous Chuck Norris once roundhouse kicked someone so hard that his foot broke the speed of light, went back in time, and killed Amelia Earhart while she was flying over the Pacific Ocean.</p>
-                <p>Chuck Norrs bar stools only have one leg, There is no theory of evolution. Just a list of animals Chuck Norris allows to live When any poll, sports games, or contests happen Chuck Norris is ALWAYS the winner, There is no theory of evolution. Just a list of creatures Chuck Norris has allowed to live, The leading causes of death in the United States are: 1. Heart Disease 2. Chuck Norris 3. Cancer Chuck Norris is my Homeboy.</p>
-                <p>The Great Wall of China was originally created to keep Chuck Norris out. It failed miserably. There is no theory of evolution. Just a list of animals Chuck Norris allows to live Contrary to popular belief, Chuck Norris, not the box jellyfish of northern Australia, is the most venomous creature on earth. </p>
-                <p>The quickest way to a man's heart is with Chuck Norris' fist, Chuck Norris originally appeared in the "Street Fighter II" video game, but was removed by Beta Testers because every button caused him to do a roundhouse kick. When asked about this "glitch," Norris replied, "That's no glitch.".</p>
+                <h3>Get it built to your needs!</h3>  
+                <p>Are you working on a project or a game mod and need quick placerholders or want to offload the extra work? From creating seamless textures, inventory icons or something unique to your project, we can help you let your project take form. From already having experience in providing assets for NoPixel & various modpacks, you can rest assured that consistency and quality will be coming your way. Take a look and see what we've already done for others, and what we can do for you.</p>
             </div>
         </div>
         </main>
         
         <footer>
-            <p>Copyright 2023 Garrett Olin. All Rights Reserved.</p>
+            <p>Silvermancer © 2023. All Rights Reserved.</p>
         </footer>      
     </body>
 </html>
