--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a class="selected" href="#">Home</a></li>
-                <li style="float:right"><a href="#">Contact</a></li>    <!--ORDER IN REVERSE, OTHERWISE DROP LIST WILL NOT APPEAR!-->
+                <li style="float:right"><a href="contactus.html">Contact</a></li>    <!--ORDER IN REVERSE, OTHERWISE DROP LIST WILL NOT APPEAR!-->
                 <li style="float:right"><a href="aboutus.html">About Us</a></li>
                 <li style="float:right" class="listmenu">
                     <a href="javascript:void(0)" class="listbutton">Gallery</a>  <!--DO NOT REMOVE VOID, USERS WILL BE DUMB OTHERWISE!-->
