--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li style="float:right"><a href="#">Contact</a></li>    <!--ORDER IN REVERSE, OTHERWISE DROP LIST WILL NOT APPEAR!-->
+                <li style="float:right"><a href="contactus.html">Contact</a></li>    <!--ORDER IN REVERSE, OTHERWISE DROP LIST WILL NOT APPEAR!-->
                 <li class="selected" style="float:right"><a href="aboutus.html">About Us</a></li>
                 <li style="float:right" class="listmenu">
                     <a href="javascript:void(0)" class="listbutton">Gallery</a>  <!--DO NOT REMOVE VOID, USERS WILL BE DUMB OTHERWISE!-->
@@ -38,10 +38,10 @@
                 <img src="images/Placeholder.png" alt="Picture of Artwork from Silvermancer" class="frame">
                 <h3>“Any sufficiently advanced technology is indistinguishable from magic”. - Arthur C. Clarke, 1962.</h3> 
                 <p class="aboutwidth">At Silvermancer, we believe of the transformative power of art with the latest techniques of technology. Nature cannot be fooled, but human perception can. With our curated artwork, we hope to exemplify that quote with showing that new technology is not to be feared, but to be harnessed and utilized to make our creativity flow freely. We offer a diverse range of artistic styles and mediums that balances keeping tribute to the experts of the past with bringing in the new school of theory and design. Let us be your sanctuary where imagination takes shape, and art comes to life. Technology is kept in check by nature, and nature is enhanced by technology. Step into the realm of Silvermancer and let the magic of art captivate your creativity.</p>
-                </div>
         </main>
+        
         <footer>
-            <p>Silvermancer Olin © 2023. All Rights Reserved.</p>
+            <p>Silvermancer © 2023. All Rights Reserved.</p>
         </footer>      
     </body>
 </html>
