--- a/contactus.html
+++ b/contactus.html
@@ -93,7 +93,7 @@
                         <td>$50 +</td>
                     </tr>                    
                     <tr>
-                        <td>AI Photo & Tweaking</td>
+                        <td>AI Photo Tweaking</td>
                         <td>3 - 6 Weeks</td>
                         <td>$50 +</td>
                     </tr>
@@ -163,8 +163,6 @@
                             <input type="submit" value="Submit">
                         </div>
                     <br>
-                    <div class="cleaner">
-
                     </div>
             </form>
         </div>
