--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="cleaner">
             <div class="column">
                 <h2 class="awork">Artwork</h2>
-                <img src="images/Placeholder.png" alt="Picture of Artwork from Silvermancer" class="frame">
+                <img src="images/ClintEast.png" alt="Picture of Clint Eastwood" class="frame">
                 <h3>Hot off the tablet!</h3> 
                 <p>From ink, charcoal and contemporary pencil to the latest in vector and AI design, here at Silvermancer we value being flexible and always experimenting with being innovative in trying new techniques. While you can't rush effort, we hope to delight you in the mean time between our releases with our diverse portfolio. Check out the above artwork for our latest releases or the Archive for our older designs.</p>
                 </div>
@@ -49,7 +49,7 @@
             </div>
             <div class="column">
                 <h2 class="gassets">Game Assets</h2>
-                <img src="images/Placeholder.png" alt="Example of Game Assets from Silvermancer" class="frame">
+                <img src="images/TranquilHills.png" alt="Picture of Cliff And Trees" class="frame">
                 <h3>Get it built to your needs!</h3>  
                 <p>Are you working on a project or a game mod and need quick placerholders or want to offload the extra work? From creating seamless textures, inventory icons or something unique to your project, we can help you let your project take form. From already having experience in providing assets for NoPixel & various modpacks, you can rest assured that consistency and quality will be coming your way. Take a look and see what we've already done for others, and what we can do for you.</p>
             </div>
