--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Ysabeau+Infant&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="type-practice2.css">
-            <title>Silvermancer</title>
-            <link rel="stylesheet" href="styles.css">
+        <title>Silvermancer</title>
+        <meta name="description" content="Silvermancer Artwork offers excellent multimedia displays for those who are looking for commissions, viewing artwork or need inspiration themselves.">
+        <link rel="stylesheet" href="styles.css">
+        
     </head>
     <body>
         <header>
@@ -22,10 +23,10 @@
                 <li style="float:right" class="listmenu">
                     <a href="javascript:void(0)" class="listbutton">Gallery</a>  <!--DO NOT REMOVE VOID, USERS WILL BE DUMB OTHERWISE!-->
                     <div class="listcontent">
-                        <a href="#">Artwork</a>
-                        <a href="#">Media Designs</a>
-                        <a href="#">Game Assets</a>
-                        <a href="#">Archive</a>
+                        <a href="artwork.html">Artwork</a>
+                        <a href="mediadesign.html">Media Designs</a>
+                        <a href="gameasset.html">Game Assets</a>
+                        <a href="archive.html">Archive</a>
                     </div>
                 </li>
 
@@ -43,13 +44,13 @@
                 </div>
              <div class="column">
                 <h2 class="mdesign">Media Design</h2>
-                <img src="images/Placeholder.png" alt="Example of Media Designs from Silvermancer" class="frame">
+                <img src="images/preview-cute-female.png" alt="Example of Media Designs from Silvermancer" class="frame">
                 <h3>Time to get Emote-tional!</h3>  
                 <p>Finding the right emotes that resonates with your unique community can be tricky but the benefits of enticing new subscribers and increasing interactivity is well worth the effort. Are there any inside jokes that you have with your community? Is there a common used emote in your channel? How can your emotes reflect your branding on other channels when used?  We will work with you to figure out your specific needs.</p>
             </div>
             <div class="column">
                 <h2 class="gassets">Game Assets</h2>
-                <img src="images/TranquilHills.png" alt="Picture of Cliff And Trees" class="frame">
+                <img src="images/grass-preview.png" alt="Picture of Cliff And Trees" class="frame">
                 <h3>Get it built to your needs!</h3>  
                 <p>Are you working on a project or a game mod and need quick placerholders or want to offload the extra work? From creating seamless textures, inventory icons or something unique to your project, we can help you let your project take form. From already having experience in providing assets for NoPixel & various modpacks, you can rest assured that consistency and quality will be coming your way. Take a look and see what we've already done for others, and what we can do for you.</p>
             </div>
