--- a/aboutus.html
+++ b/aboutus.html
@@ -5,8 +5,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Ysabeau+Infant&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="type-practice2.css">
-            <title>Silvermancer</title>
+        <title>About Silvermancer</title>
+        <meta name="description" content="Silvermancer Artwork offers excellent multimedia displays for those who are looking for commissions, viewing artwork or need inspiration themselves.">
             <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -22,10 +22,10 @@
                 <li style="float:right" class="listmenu">
                     <a href="javascript:void(0)" class="listbutton">Gallery</a>  <!--DO NOT REMOVE VOID, USERS WILL BE DUMB OTHERWISE!-->
                     <div class="listcontent">
-                        <a href="#">Artwork</a>
-                        <a href="#">Media Designs</a>
-                        <a href="#">Game Assets</a>
-                        <a href="#">Archive</a>
+                        <a href="artwork.html">Artwork</a>
+                        <a href="mediadesign.html">Media Designs</a>
+                        <a href="gameasset.html">Game Assets</a>
+                        <a href="archive.html">Archive</a>
                     </div>
                 </li>
 
@@ -35,7 +35,9 @@
         
         <main>
                 <h2 class="awork">About Silvermancer</h2>
-                <img src="images/Placeholder.png" alt="Picture of Artwork from Silvermancer" class="frame">
+                <br>
+                <img src="images/Steps.jpg" alt="Artwork of Steps from Silvermancer" class="frame">
+                <br>
                 <h3>“Any sufficiently advanced technology is indistinguishable from magic”. - Arthur C. Clarke, 1962.</h3> 
                 <p class="aboutwidth">At Silvermancer, we believe of the transformative power of art with the latest techniques of technology. Nature cannot be fooled, but human perception can. With our curated artwork, we hope to exemplify that quote with showing that new technology is not to be feared, but to be harnessed and utilized to make our creativity flow freely. We offer a diverse range of artistic styles and mediums that balances keeping tribute to the experts of the past with bringing in the new school of theory and design. Let us be your sanctuary where imagination takes shape, and art comes to life. Technology is kept in check by nature, and nature is enhanced by technology. Step into the realm of Silvermancer and let the magic of art captivate your creativity.</p>
         </main>
