--- a/contactus.html
+++ b/contactus.html
@@ -5,9 +5,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Ysabeau+Infant&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="type-practice2.css">
-            <title>Silvermancer</title>
+        <title>Silvermancer Contact</title>
+        <meta name="description" content="Silvermancer Artwork offers excellent multimedia displays for those who are looking for commissions, viewing artwork or need inspiration themselves.">
             <link rel="stylesheet" href="styles.css">
+        
     </head>
     <body>
         <header>
@@ -22,10 +23,10 @@
                 <li style="float:right" class="listmenu">
                     <a href="javascript:void(0)" class="listbutton">Gallery</a>  <!--DO NOT REMOVE VOID, USERS WILL BE DUMB OTHERWISE!-->
                     <div class="listcontent">
-                        <a href="#">Artwork</a>
-                        <a href="#">Media Designs</a>
-                        <a href="#">Game Assets</a>
-                        <a href="#">Archive</a>
+                        <a href="artwork.html">Artwork</a>
+                        <a href="mediadesign.html">Media Designs</a>
+                        <a href="gameasset.html">Game Assets</a>
+                        <a href="archive.html">Archive</a>
                     </div>
                 </li>
 
@@ -81,11 +82,6 @@
                         <td>Landscape Painting</td>
                         <td>2 - 4 Weeks</td>
                         <td>$40 +</td>
-                    </tr>
-                    <tr>
-                        <td>Caricature Portrait</td>
-                        <td>3 - 6 Weeks</td>
-                        <td>$50 +</td>
                     </tr>
                     <tr>
                         <td>Charicature Portrait</td>
