--- a/aboutus.html
+++ b/aboutus.html
@@ -10,8 +10,9 @@
             <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <header>
-            <h1>Silvermancer</h1>
+        <header class="topmover">
+                <img src="images/Logo.png" alt="Logo of Silvermancer" class="iconlogo">
+                <h1>Silvermancer</h1>
         </header>
         
         <nav>
