--- a/artwork.html
+++ b/artwork.html
@@ -11,8 +11,9 @@
         
     </head>
     <body>
-        <header>
-            <h1>Silvermancer</h1>
+        <header class="topmover">
+                <img src="images/Logo.png" alt="Logo of Silvermancer" class="iconlogo">
+                <h1>Silvermancer</h1>
         </header>
         
         <nav>
@@ -44,7 +45,7 @@
                       <a href="images/Cheese.png" target="_blank" class="gallery-link">
                          <figure class="gallerythumb">
                             <img src="images/preview-cheese.png" alt="Artwork of Cheese by Silvermancer" class="galleryimage childimage">
-                            <figcaption class="gallerycaption">Czarch of Charcuterie</figcaption>
+                            <figcaption class="gallerycaption">Czar of Charcuterie</figcaption>
                          </figure>
                       </a>
 
