--- a/contactus.html
+++ b/contactus.html
@@ -11,8 +11,9 @@
         
     </head>
     <body>
-        <header>
-            <h1>Silvermancer</h1>
+        <header class="topmover">
+                <img src="images/Logo.png" alt="Logo of Silvermancer" class="iconlogo">
+                <h1>Silvermancer</h1>
         </header>
         
         <nav>
